--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
     "node-sass": "^4.12.0",
+    "sass-loader": "^7.3.1",
+    "css-loader": "^3.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "simplebar": "^4.1.0"
   },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
